--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-scripts": "^5.0.1"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.12.0",
+    "react-scripts": "^5.0.1",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
